--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <p class="lead"> <i><b> WeWill </b></i> is driven by the vision of a world without suffering. Our mission is to nourish lives, empower communities, respond to emergencies and build a strong movement towards spreading crisis.</p>
         </div>
         <div class="col-md-5">
-            <img class="img-fluid" src="C:\Users\samruddha\OneDrive\Desktop\Ansrcoach\2.jpg" alt="">
+            <img class="img-fluid" src="https://user-images.githubusercontent.com/74726936/142976564-9ad44b50-240d-4917-a8bf-fca3a8f2cda1.jpg" alt="">
              
         </div>
     </div>
