--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet"href="style1.css">
-    <link rel="icon"href="C:\Users\samruddha\OneDrive\Desktop\Ansrcoach\4_icon.png">
+    <link rel="icon"href="https://user-images.githubusercontent.com/74726936/143022622-7fffe155-371d-4a82-a46c-fb7e155e82ab.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
@@ -20,7 +20,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top" id="mainNav">
         <div class="container">
             <a class="navbar-brand js-scroll-trigger" href="#img2"id="icon">
-              <img src="C:\Users\samruddha\OneDrive\Desktop\Ansrcoach\6_icon.png">
+              <img src="https://user-images.githubusercontent.com/74726936/143022346-f47eb7bc-0b6b-4b72-af4c-d4b9b1e71023.png">
                 WeWill
             </a>
             <button class="navbar-toggler navbar-toggler-right" 
@@ -53,7 +53,7 @@
             <section id="our-mission">
             <div class="carousel-inner"id="img2">
               <div class="carousel-item active">
-                <img class="work-table1" src="C:\Users\samruddha\OneDrive\Desktop\Ansrcoach\child2.jpg" class="d-block w-100" alt="child2">
+                <img class="work-table1" src="https://user-images.githubusercontent.com/74726936/143022556-238ee8bf-bff8-4e58-98a4-3b786aec9b7c.jpg" class="d-block w-100" alt="child2">
                 <div class="carousel-caption d-none d-md-block">
                   <h2>We Care for You</h2>
                   <a class="btn btn-success btn-lg text-uppercase js-scroll-trigger" 
@@ -92,7 +92,7 @@
           <p class="lead">We provide life-changing resources such as clean water, medical aid, food, equal educational opportunities to Childrens in need. Our view of poverty is holistic and complex. We nourish lives, empower communities, respond to emergencies and build a strong movement towards spreading crisis..</p>
       </div>
       <div class="col-md-5 order-md-1">
-          <img class="img-fluid" src="C:\Users\samruddha\OneDrive\Desktop\Ansrcoach\3.jpg" alt="">
+          <img class="img-fluid" src="https://user-images.githubusercontent.com/74726936/143022731-68f7c323-d192-48b3-ad4b-56fabfc7962e.jpg" alt="">
            
       </div>
   </div>
@@ -104,7 +104,7 @@
             <p class="lead"> Your smallest contribution makes a big difference to children's lives.We count on the generosity of people like you to be able to create real change for children.</p>
         </div>
         <div class="col-md-5">
-            <img class="img-fluid" src="C:\Users\samruddha\OneDrive\Desktop\Ansrcoach\5.jpg" alt="">
+            <img class="img-fluid" src="https://user-images.githubusercontent.com/74726936/143022659-8868897c-1e5d-421f-80e1-83b4977ee2e5.jpg" alt="">
              
         </div>
     </div>
